; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_filter.c_mp_pin_set_manual_connection.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_filter.c_mp_pin_set_manual_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_pin = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_pin_set_manual_connection(%struct.mp_pin* %0, i32 %1) #0 {
  %3 = alloca %struct.mp_pin*, align 8
  %4 = alloca i32, align 4
  store %struct.mp_pin* %0, %struct.mp_pin** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mp_pin*, %struct.mp_pin** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %2
  %9 = load %struct.mp_pin*, %struct.mp_pin** %3, align 8
  %10 = getelementptr inbounds %struct.mp_pin, %struct.mp_pin* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  br label %17

16:                                               ; preds = %2
  br label %17

17:                                               ; preds = %16, %8
  %18 = phi i32* [ %15, %8 ], [ null, %16 ]
  %19 = call i32 @mp_pin_set_manual_connection_for(%struct.mp_pin* %5, i32* %18)
  ret void
}

declare dso_local i32 @mp_pin_set_manual_connection_for(%struct.mp_pin*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
